config/v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
        version: v2
    spec:
      containers:
      - name: demo
        image: test.registry.zj.chinamobile.com/special/demo-go
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
