config/60-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
    - demo
  http:
  - route:
    - destination:
        host: demo
        subset: v1
      weight: 40
    - destination:
        host: demo
        subset: v2
      weight: 60
