config/rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
spec:
  host: demo
  subsets:
  # - name: v1
  #   labels:
  #     version: v1
  # - name: v2
  #   labels:
  #     version: v2
