config/vm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bomc-ultrabpp
spec:
  hosts:
  - "*"
  gateways:
  - bomc-ultrabpp-gateway
  http:
  - match:
    - uri:
        exact: /version
    route:
    - destination:
        host: bomc-ultrabpp
        subset: v1
        port:
          number: 8001
      weight: 100
